objects/mkto_si__MarketoSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>mkto_si__BatchSize__c</fullName>
        <description>Number of rows per page on dashboard.</description>
        <label>Batch Size</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__CacheMinutesUntilExpired__c</fullName>
        <description>Number of minutes of inactivity before cache is no longer used and API calls are forced when user logs back in. For example, if this is set to 180 a user can log off and log back in within 2 hours and the cached data is accessed instead of direct API calls - assuming the cache is turned on with UseCache set to true. Assuming this time is outside the MinutesToRefreshCache value (5 minutes, etc.), the cache will refresh after:

1. User clicks on the main Marketo tab, displaying the dashboard
2. The individual asynchronous update processes finish their calls to the Marketo API and store their results into their respective cache objects (BestBetsCache, etc.)</description>
        <label>CacheMinutesUntilExpired</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__CacheState__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CacheState</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__MinutesToRefreshCache__c</fullName>
        <description>Number of minutes before an asynchronous request to refresh the cache is made.  The cache will refresh automatically and without impacting performance when:

1. User is viewing any tab in the main dashboard, from the main Marketo tab
2. The current time minus MinutesToRefreshCache is later than the last successful update for each cached object (best bets, watch list, lead feed, web activity, etc.)</description>
        <label>MinutesToRefreshCache</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MinutesToRefreshLeadFeed__c</fullName>
        <label>MinutesToRefreshLeadFeed</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__UseCache__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseCache</label>
        <type>Checkbox</type>
    </fields>
    <label>Marketo Settings</label>
</CustomObject>